force-app/main/default/src/objects/VoiceCall/fields/Call_transferred_or_phone_provided__c.field-meta.xml
<CustomField>
    <fullName>Call_transferred_or_phone_provided__c</fullName>
    <label>Call transferred or phone # provided</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>call transferred</fullName>
            </value>
            <value>
                <fullName>phone # provided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>