force-app/main/default/src/objects/VoiceCall/fields/MVN_Case__c.field-meta.xml
<CustomField>
    <fullName>MVN_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Updated by automated process based on the Case value of Related To. Used for reporting.</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Voice Calls (Case)</relationshipLabel>
    <relationshipName>Voice_Calls</relationshipName>
    <type>Lookup</type>
</CustomField>