force-app/main/default/src/objects/VoiceCall/fields/MVN_Topic__c.field-meta.xml
<CustomField>
    <fullName>MVN_Topic__c</fullName>
    <label>Topic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>HCP Appeal</fullName>
            </value>
            <value>
                <fullName>HCP General Support</fullName>
            </value>
            <value>
                <fullName>HCP Shipment Coordination</fullName>
            </value>
            <value>
                <fullName>HCP Welcome Call</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Patient General Support</fullName>
            </value>
            <value>
                <fullName>Patient Shipment Coordination</fullName>
            </value>
            <value>
                <fullName>Patient Welcome Call</fullName>
            </value>
            <value>
                <fullName>Payer Communication</fullName>
            </value>
            <value>
                <fullName>RBM Communication</fullName>
            </value>
            <value>
                <fullName>SP Communication</fullName>
            </value>
            <value>
                <fullName>Test Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>