force-app/main/default/src/objects/VoiceCall/fields/Program_Offered__c.field-meta.xml
<CustomField>
    <fullName>Program_Offered__c</fullName>
    <label>Program Offered</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ambassador</fullName>
            </value>
            <value>
                <fullName>Mentor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>