force-app/main/default/src/objects/VoiceCall/fields/Seconds_to_Answer__c.field-meta.xml
<CustomField>
    <fullName>Seconds_to_Answer__c</fullName>
    <formula>((CallAcceptDateTime-CallQueuedDateTime)*86400)-5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seconds to Answer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>