force-app/main/default/src/objects/VoiceCall/validationRules/If_Program_Interest_Must_Select_Call.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Program_Interest_Must_Select_Call</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK( Program_Offered__c)) &amp;&amp; NOT(INCLUDES(Program_Interest__c, &quot;Not Interested&quot;)) &amp;&amp;  ISPICKVAL( Call_transferred_or_phone_provided__c, &quot;&quot; )</errorConditionFormula>
    <errorDisplayField>Call_transferred_or_phone_provided__c</errorDisplayField>
    <errorMessage>You must select whether the call was transferred or a phone number was provided</errorMessage>
</ValidationRule>