force-app/main/default/src/objects/VoiceCall/validationRules/Must_Link_to_Care_Plan_if_Program.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_Link_to_Care_Plan_if_Program</fullName>
    <active>true</active>
    <errorConditionFormula>(INCLUDES(Program_Interest__c , &quot;Ambassador&quot;) || INCLUDES(Program_Interest__c , &quot;SNOW&quot;)) 
&amp;&amp; ISBLANK( MVN_Case__c ) 
&amp;&amp; MVN_Case__r.RecordType.Name = &quot;CarePlan&quot;
&amp;&amp; ISPICKVAL( MVN_Outcome__c, &quot;Call Completed&quot;) 
&amp;&amp; NOT(ISBLANK( Program_Offered__c))</errorConditionFormula>
    <errorDisplayField>RelatedRecordId</errorDisplayField>
    <errorMessage>You must link to a care plan if caller shows interest in a program</errorMessage>
</ValidationRule>