force-app/main/default/src/objects/VoiceCall/listViews/MVN_All_Voice_Calls.listView-meta.xml
<ListView>
    <fullName>MVN_All_Voice_Calls</fullName>
    <columns>Name</columns>
    <columns>CallType</columns>
    <columns>CallDisposition</columns>
    <columns>Caller</columns>
    <columns>FromPhoneNumber</columns>
    <columns>Recipient</columns>
    <columns>ToPhoneNumber</columns>
    <columns>Owner</columns>
    <columns>CreatedDate</columns>
    <filterScope>Everything</filterScope>
    <label>All Voice Calls (Regeneron)</label>
</ListView>