force-app/main/default/src/objects/VoiceCall/listViews/MVN_Outbound_Voice_Calls.listView-meta.xml
<ListView>
    <fullName>MVN_Outbound_Voice_Calls</fullName>
    <columns>Name</columns>
    <columns>CallType</columns>
    <columns>CallDisposition</columns>
    <columns>Caller</columns>
    <columns>FromPhoneNumber</columns>
    <columns>Recipient</columns>
    <columns>ToPhoneNumber</columns>
    <columns>Owner</columns>
    <columns>CreatedDate</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CallType</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <label>Outbound Voice Calls</label>
</ListView>